# code-help

boilerplates/fast_api/: .flake8  Dockerfile  Makefile  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini
boilerplates/fast_api/app/: main.py  schemas.py
boilerplates/fast_api/app/apis/: __init__.py  ping.py
boilerplates/fast_api/app/apis/v1/: __init__.py  login.py  users.py
boilerplates/fast_api/app/core/: hashing.py  security.py  settings.py
boilerplates/fast_api/app/db/: models.py  session.py
boilerplates/fast_api/app/db/alembic/: env.py
boilerplates/fast_api/app/db/alembic/versions/: 0001_added_user_table.py
boilerplates/fast_api/app/repository/: users.py
boilerplates/fast_api/tests/: conftest.py
boilerplates/fast_api/tests/apis/: test_ping.py
boilerplates/fast_api/tests/apis/v1/: test_login.py  test_users.py
boilerplates/fast_api/tests/repository/: test_users.py  users.py
boilerplates/python/: .flake8  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  pytest.ini
composefiles/: docker-compose.amqp.yml  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.influx.yml  docker-compose.mongodb.yml  docker-compose.nginx-with-volumes.yml  docker-compose.pg-debug.yml  docker-compose.pg.yml  docker-compose.postgres.yml  docker-compose.prod.yml  docker-compose.redis.yml
makefiles/: makefile2  makefile3  makefile4
nginx/: README.md  proxy_http.conf  proxy_unix_socket.conf  proxy_uwsgi.conf  proxy_with_headers.conf  proxy_with_static.conf
python/: .flake8
terraform/: README.md  digital_ocean_droplet.tf  (+3 more)
(+93 files in other folders)
